<resources>
    <string name="app_name">Leisure</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_sports">SportsActivity</string>
    <string name="NAVER_API_KEY">FlPndZ3LYe2WpCIqZdWG</string>
    <string name="str_done">완료</string>
    <string name="siseol">시설정보</string>
    <string name="program">프로그램</string>
    <string name="info">찾아가는길</string>
    <string name="gomaddress">주소 : 서울시 송파구 동남로 271(오금공원내) / 송파구 오금동 51번지</string>
    <string name="gomcontact">전화 : (02)-404-6240 / 팩스 : (02)-443-8025</string>
    <string name="gomtrans">버스 : 일반버스 3314, 3315, 362(좌석) 송파도서관 하차</string>
    <string name="gomtrans2">지하철 : 전철 5호선 개룡역 1번 출구 도보 3분</string>
    <string name="current">현재위치</string>
    <string-array name="Center">
        <item>서울특별시</item>
        <item>1. 동천재활체육센터 (노원구)</item>
        <item>2. 마포푸르메스포츠센터 (마포구)</item>
        <item>3. 서울곰두리체육센터 (송파구)</item>
        <item>4. 서부재활체육센터 (은평구)</item>
        <item>5. 서울수중재활체육센터 (강동구)</item>
        <item>6. 정립회관 (광진구)</item>
        <item>인천광역시</item>
        <item>1. 인천장애인국민체육센터 (연수구)</item>
        <item>2. 인천장애인체육관 (연수구)</item>
        <item>대전광역시</item>
        <item>1. 대전시립체육재활원 (대덕구)</item>
        <item>2. 대전서구건갱체련관 (서구)</item>
        <item>3. 성세체육관 (유성구)</item>
        <item>4. 대전장애인국민체육센터	 (유성구)</item>
        <item>광주광역시</item>
        <item>1. 광주광역시장애인체육관 (북구)</item>
        <item>2. 광주장애인국민체육센터 (서구)</item>
        <item>강원도</item>
        <item>1. 원주드림체육관 (원주시)</item>
        <item>2. 춘천시장애인스포츠센터 (춘천시)</item>
        <item>경기도</item>
        <item>1. 고양시재활스포츠센터 (고양시)</item>
        <item>2. 광명시종합복지관체육관 (광명시)</item>
        <item>3. 명휘체육센터 (안산시)</item>
        <item>4. 성분도복지체육관 (광주시)</item>
        <item>5. SRC재활체육관 (광주시)</item>
        <item>충청북도</item>
        <item>1. 제천시어울림체육관 (제천시)</item>
        <item>2. 충청북도곰두리체육관 (제천시)</item>
        <item>3. 청주시장애인스포츠센터 (청주시)</item>
        <item>충청남도</item>
        <item>1. 천안시장애인종합복지관 (천안시)</item>
        <item>2. 정심체육관 (보령시)</item>
        <item>3. 홍성군장애인스포츠센터 (홍성군)</item>
        <item>경상북도</item>
        <item>1. 구미시장애인체육관 (구미시)</item>
        <item>2. 상주시장애인체육관 (상주시)</item>
        <item>3. 경주시장애인체육관 (창원시)</item>
        <item>4. 애명체육관 (안동시)</item>
        <item>5. 문경시장애인체육관 (문경시)</item>
        <item>경상남도</item>
        <item>1. 창원시립곰두리국민체육센터 (창원시)</item>
        <item>2. 창원시장애인체육관 (창원시)</item>
        <item>전라북도</item>
        <item>1. 전라북도장애인체육관 (전주시)</item>
        <item>2. 정읍곰두리스포츠센터 (정읍시)</item>
        <item>3. 김제시장애인체육관 (김제시)</item>
        <item>4. 군산시장애인체육관 (군산시)</item>
        <item>전라남도</item>
        <item>1. 전남장애인체육관 (나주시)</item>
        <item>2. 여수시장애인국민체육센터 (여수시)</item>
        <item>제주도</item>
        <item>1. 제주장애인국민체육센터 (제주시)</item>
    </string-array>
</resources>
